--- a/mobile/app/build.gradle
+++ b/mobile/app/build.gradle
@@ -29,5 +29,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.0.0'
+    compile 'com.android.support:recyclerview-v7:21.0.0'
     compile 'com.couchbase.lite:couchbase-lite-android:1.0.4'
+    compile 'com.jakewharton:butterknife:6.0.0'
 }
